<resources>
    <string name="app_name">PokeGuess</string>

    <!--===========-->
    <!-- Menu Page -->
    <!--===========-->
    <string name="config_ip">http://192.168.0.160:3000</string>

    <!--===========-->
    <!-- Menu Page -->
    <!--===========-->
    <string name="menu_page_title">PokeGuess</string>
    <!-- easy, normal, master -->
    <string name="menu_page_classic_button">Classic</string>
    <!-- marathon mode -->
    <string name="menu_page_challenge_button">Challenge</string>
    <string name="menu_page_leaderboard_button">Leaderboard</string>
    <string name="menu_page_settings_button">Settings</string>
    <string name="menu_page_api_status">API status</string>
    <string name="menu_page_quit_button">Quit</string>
    <string name="menu_page_credits">Made by Ahmed MOUSSA &amp; Kévin LEGENDRE</string>

    <!--===========-->
    <!-- Game Page -->
    <!--===========-->
    <string name="game_pokemon_name">Who\'s that pokemon?</string>
    <string name="game_pokemon_name_input">@string/game_pokemon_name</string>
    <string name="game_confirm_pokemon_button">Guess</string>
    <string name="game_joker_button">I don\'t know</string>

    <!--==============-->
    <!-- Profile Page -->
    <!--==============-->
    <string name="game_player_title">PokeGuess profile</string>
    <string name="game_player_name">Username: </string>
    <string name="game_player_name_input">@string/game_player_name</string>
    <string name="game_player_password">Password: </string>
    <string name="game_player_password_input">@string/game_player_password</string>
    <string name="game_player_confirm_button">Confirm</string>

    <!--==============-->
    <!-- Leader-board -->
    <!--==============-->
    <string name="leaderboard_title">PokeGuess Leaderboard</string>
    <string name="leaderboard_challenge_description">Top 100 challengers</string>
    <string name="leaderboard_classic_description">Top 100 masters</string>
    <string name="leaderboard_player_name">Name:</string>
    <string name="leaderboard_player_score">Score:</string>
    <string name="leaderboard_player_rank">Rank:</string>

    <!--===============-->
    <!-- Settings page -->
    <!--===============-->
    <string name="settings_title">PokeGuess settings</string>
    <string name="settings_warning">App needs to restart for the generation settings to apply!</string>
    <string name="settings_save_button">Save</string>

    <!--===================-->
    <!-- Achievements page -->
    <!--===================-->
    <string name="achievements_title">Achievements</string>

    <string name="achievement_1_name">Who\'s this Pokémon?</string>
    <string name="achievement_1_description">Guess one Pokémon name correctly.</string>

    <string name="achievement_2_name">Gym Leader</string>
    <string name="achievement_2_description">Guess 10 Pokémon names correctly.</string>

    <string name="achievement_3_name">Elite 4</string>
    <string name="achievement_3_description">Guess 100 Pokémon names correctly.</string>

    <string name="achievement_4_name">Champion</string>
    <string name="achievement_4_description">Guess 250 Pokémon names correctly.</string>

    <string name="achievement_5_name">Master Detective</string>
    <string name="achievement_5_description">Guess 1000 Pokémon names correctly.</string>

    <!--====================-->
    <!-- Diff selector page -->
    <!--====================-->
    <string name="diff_selector_title">Choose a difficulty</string>

</resources>