<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="PokeGuess" />

    <ImageView
        android:id="@+id/HomePokemonImageView"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_above="@+id/HomeButtonLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@color/silver" />

    <LinearLayout
        android:id="@+id/HomeButtonLayout"
        android:layout_width="220dp"
        android:layout_height="270dp"
        android:layout_above="@+id/bottomTextView"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/classic_mode_button"
            style="@style/SubtitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue_volc"
            android:text="@string/menu_page_classic_button"
            android:textColor="@color/silver" />

        <Button
            android:id="@+id/challenge_mode_button"
            style="@style/SubtitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue_volc"
            android:text="@string/menu_page_challenge_button"
            android:textColor="@color/silver" />

        <Button
            android:id="@+id/leaderboard_button"
            style="@style/SubtitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue_volc"
            android:text="@string/menu_page_leaderboard_button"
            android:textColor="@color/silver" />

        <Button
            android:id="@+id/quit_button"
            style="@style/SubtitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue_volc"
            android:text="@string/menu_page_quit_button"
            android:textColor="@color/orange_volc" />
    </LinearLayout>

    <TextView
        android:id="@+id/bottomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/menu_page_credits"
        style="@style/Credits"
        />

</RelativeLayout>
